--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
-
+.vscode/
+logs/
+.nvm/
+.bashrc
+public/videos/*.mov
 # env files (can opt-in for committing if needed)
 .env*
 
