--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "eslint": "8.57.0",
-    "eslint-config-next": "15.2.3"
+    "eslint": "^9.39.3",
+    "eslint-config-next": "^15.5.9"
   }
 }
